Manage overflow for tables and dataTables. Fix #3.

--- a/inst/templates/readthedown/readthedown.css
+++ b/inst/templates/readthedown/readthedown.css
@@ -440,12 +440,16 @@ code{
     margin:1px 0px 24px 0px;
 }
 
+.table-wrapper {
+  overflow-x: auto;
+  margin-bottom: 1.8em;
+}
 
 table{
     border-collapse:collapse;
     border-spacing:0;
     empty-cells:show;
-    margin-bottom:24px;
+    margin:0;
     border-bottom:1px solid #e1e4e5;
 }
 
@@ -480,6 +484,16 @@ table tr:nth-child(2n-1) td{
 table tr:nth-child(2n) td{
     background-color:white;
 }
+
+.dataTables_wrapper {
+  overflow-x: auto;
+}
+
+#content .section .dataTables_wrapper a {
+  background-image: none;
+  padding: .2em;
+}
+
 
 .rotate-90{
     -webkit-transform:rotate(90deg);
